# government-contract-evaluator-agent

./: .env.example  .env.production.example  .gitignore  AI_PIPELINE_ANALYSIS.md  CLAUDE.md  DEPLOYMENT.md  DISCOVERY_AGENT_TEST_RESULTS.txt  E2E_TESTING_DOCUMENTATION.md  EVALUATION_AGENT_TEST_RESULTS.txt  FINAL_TEST_REPORT.md  INFRASTRUCTURE.md  LOCAL_SETUP_GUIDE.md  LOCAL_TESTING_RESULTS.md  QUICK_START.md  QUICK_TEST_RESULTS.md  README.md  REQUIREMENTS_GOVRAT_FEATURES.md  SAMPLE_COMPANY_DATA.md  START_HERE.md  TESTING_QUICK_START.md  TEST_REPORT.md  deploy-quick.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  evaluation_output.json  evaluation_output.txt  govai-api.service  govai-frontend.service  package-lock.json  package.json  run-discovery.bat  run-embeddings.bat  run-evaluation.bat  setup-database.bat  start-backend.bat  start-frontend.bat  test_discovery_agent.py  test_evaluation_agent.py
backend/: .dockerignore  .env.production.example  Dockerfile  Dockerfile.prod  README_SETUP.md  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  requirements.txt  seed_sample_data.py
backend/agents/: __init__.py  discovery.py  email_agent.py  embedding_agent.py  evaluation.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/migrations/: env.py
backend/scripts/: cleanup_opportunities.py  discover_dc_independent.py  discover_dc_ocp.py  discover_forecasts.py  discover_opportunities.py  discover_usaspending.py  evaluate_pending.py  extract_documents.py  govai-crontab  import_osdbu_contacts.py  (+3 more)
(+279 files in other folders)
